fixed overflow-x on all pages to allow for elements to be pushed off the side of the page by javascript

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,6 +11,7 @@ html, body {
 	font-family: "Roboto", Corbel, Avenir, "Lucida Grande", "Lucida Sans", sans-serif;
 	color: $baseFontColor;
 	line-height: 1.25;
+	overflow-x: hidden;
 }
 
 *:after, *:before, * {
